--- a/client/src/components/SignUp/SignUp.module.css
+++ b/client/src/components/SignUp/SignUp.module.css
@@ -1,5 +1,5 @@
 .contSignUp {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     width: 90%;
     height: 20rem;
     display: flex;
@@ -9,7 +9,7 @@
 }
 
 .divTitle {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     width: 100%;
     height: 30%;
     display: flex;
@@ -20,13 +20,13 @@
 }
 
 .divForm {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     height: 70%;
     width: 100%;
 }
 
 .form {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 100%;
     height: 100%;
     display: flex;
@@ -56,22 +56,45 @@
     font-family: 'Nunito';
     padding: 2% 4%;
     font-size: 1.5em;
+    transition: all 0.2s ease;
+}
+.inputButton:focus {
+    width: 80%;
+    border: none;
+    border-radius: 10px;
+    font-family: 'Nunito';
+    padding: 2% 4%;
+    font-size: 1.5em;
+    background-color: black;
+    color: white;
 }
 
 
 /* Small devices */
 @media screen and (min-width: 576px) {
-
+.contSignUp {
+    /* background-color: red; */
+    width: 30rem;
+}
 }
 /* Medium devices */
 @media screen and (min-width: 768px) {
-
+    /* .contSignUp {
+        background-color: blue;
+    } */
+    
 }
 /* Large devices */
 @media screen and (min-width: 992px) {
-
+    /* .contSignUp {
+        background-color: green;
+    } */
+    
 }
 /* Extra large devices */
 @media screen and (min-width: 1200px) {
+    /* .contSignUp {
+        background-color: orange;
+    } */
 
 }
