--- a/client/src/components/LastRecords/LastRecords.module.css
+++ b/client/src/components/LastRecords/LastRecords.module.css
@@ -1,3 +1,8 @@
 .contLastRecords {
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
