--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -5,3 +5,9 @@
     align-items: center;
     justify-content: center;
 }
+.contHome > div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
