Add css Home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600;800&display=swap');
 :root {
+  --back: #C7D0FF;
   --blue: #7083E0;
   --red: #FF9F80;
   --green: #A3E070;
