--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -5,9 +5,46 @@
     align-items: center;
     justify-content: center;
 }
-.contHome > div {
+/* .contHome > div {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+} */
+.divTop {
+    /* border: 1px solid green; */
+    border-radius: 0 0 10px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 3rem;
+    position: fixed;
+    top: 0;
+    background-color: var(--back);
+    box-shadow: 0 5px 25px 0 black;
+}
+
+.divRecords {
+    /* border: 1px solid blue; */
+    margin-top: 5rem;
+    margin-bottom: 5rem;;
+    /* height: 20rem; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.divBottom {
+    /* border: 1px solid green; */
+    border-radius: 10px 10px 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    height: 3rem;
+    bottom: 0;
+    background-color: var(--back);
+    box-shadow: 0 -5px 25px 0 rgba(0, 0, 0, 0.3);
 }
