--- a/client/src/components/CardOper/CardOper.module.css
+++ b/client/src/components/CardOper/CardOper.module.css
@@ -1,64 +1,106 @@
 .contCardOper {
-    /* border: 1px solid blue; */
-    width: 90%;
-    /* margin: 1rem 0; */
-    border: 1px solid black;
-    border-radius: 10px;
+    width: 100%;
+    /* margin: .5rem 0; */
+    border-bottom: 1px solid var(--secFont);
     height: 3rem;
-    padding: .5rem 0;
+    /* padding: .5rem 0; */
     transition: all 0.2s ease;
     overflow: hidden;
 }
 .contCardOper:focus-within {
     height: 10rem;
 }
-.dateNmount {
-    /* border: 1px solid red; */
-    width: 100%;
+.visibleInfo {
     height: 3rem;
-    margin: 0;
+    margin: 0 1em;
+    /* border: 1px solid red; */
     display: flex;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: space-between;
+}
+.editDiv {
+    width: 10%;
+    /* border: 1px solid blue; */
+}
+.dataDiv {
+    /* border: 1px solid blue; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.dateInput, .conceptInput {
+    /* border: 1px solid red; */
+    border: none;
+    outline: none;
+    font-size: 1em;
+    font-family: 'Nunito';
+    color: var(--priFont);
+    font-weight: 800;
+    margin: 0;
+    padding: 0;
+}
+.dateInput {
+    color: var(--secFont);
+    font-weight: 600;
+    /* border: 1px solid green; */
+    font-size: .7em;
+}
+.mountDiv {
+    /* border: 1px solid blue; */
+    width: 20%;
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
-.dateNmount > input {
+.income {
+    outline: none;
+    border: none;
+    padding: .3em;
+    width: 100%;
     font-family: 'Nunito';
-    font-size: 1.5em;
-    width: 35%;
+    color: var(--greenDark);
+    background-color: var(--greenBright);
+    border-radius: 5px;
+    font-weight: 800;
+    text-align: center;
+}
+.expenses {
+    outline: none;
+    border: none;
+    padding: .3em;
+    width: 100%;
+    font-family: 'Nunito';
+    color: var(--secFont);
+    font-weight: 800;
+    text-align: center;
 }
 .hideInfo {
     /* border: 1px solid red; */
-    margin-top: .5rem;
-    width: 100%;
-    height: 6rem;
+    height: 7rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.infoConcept {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-.infoTypes {
-    display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 100%;
 }
-
-.infoConcept > input {
+.hideInfo > label {
+    /* border: 1px solid red; */
+    width: 90%;
     font-family: 'Nunito';
-    font-size: 1.5em;
+    font-weight: 600;
+    color: var(--secFont);
+}
+.hideInfo > input {
     width: 80%;
-}
-.infoTypes > input {
     font-family: 'Nunito';
-    font-size: 1.5em;
-    width: 40%;
+    font-weight: 800;
+    color: var(--priFont);
+    outline: none;
+    border: none;
 }
-.infoConcept, .infoTypes {
-    height: 3rem;
+.hideInfo > div {
+    border: 1px solid green;
+    width: 90%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
