--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -2,22 +2,41 @@
     /* border: 1px solid red; */
     position: absolute;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    height: 3rem;
+    /* margin: 2%; */
+    z-index: 2;
+}
+.navButton {
+    font-family: 'Nunito';
+    font-weight: 800;
+    color: var(--primary);
+    background-color: transparent;
+    border: none;
+    height:100%;
+    width: 10%;
+    padding: 0;
+    margin-right: 1em;
 }
 .backgroundNavBar {
     width: 100%;
     height: 100vh;
     position: absolute;
     top: 0;
-    /* background-color: grey; */
+    background-color: rgba(0, 0, 0, 0.2);
 }
 .closeDiv {
+    /* border: 1px solid red; */
     position: absolute;
     height: 100vh;
     width: 50%;
     left: 0;
 }
 .contMenu {
-    /* border: 1px solid blue; */
+    border-left: 1px solid var(--secFont);
+    box-shadow: -5px 0 15px -5px var(--secFont);
     position: absolute;
     height: 100vh;
     width: 50%;
@@ -28,17 +47,30 @@
     background-color: white;
 }
 .link {
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    /* width: 100%; */
     padding: 1rem;
-    /* border: 1px solid red; */
-    margin: 3rem 1rem;
+    border-top: 1px solid var(--secFont);
+    border-bottom: 1px solid var(--secFont);
+    margin: 3rem 0;
     font-family: 'Nunito';
     font-size: 1.5rem;
+    font-weight: 800;
+    color: var(--priFont);
     text-decoration: none;
-    color: black;
+    /* color: black; */
+}
+.link:active {
+    color: var(--primary);
 }
 .contMenu > button {
     border: none;
+    padding: .5em 0;
     font-family: 'Nunito';
     font-size: 1.5rem;
+    font-weight: 600;
+    color: var(--priFont);
+    /* background-color: transparent; */
+    /* border-bottom: 2px solid var(--secFont); */
+    /* border-top: 2px solid var(--secFont); */
 }
