--- a/client/src/components/SignUp/SignUp.module.css
+++ b/client/src/components/SignUp/SignUp.module.css
@@ -17,6 +17,7 @@
     align-items: center;
     font-family: 'Nunito';
     font-size: 2em;
+    color: var(--primary);
 }
 
 .divForm {
@@ -56,11 +57,17 @@
     font-family: 'Nunito';
     padding: 2% 4%;
     font-size: 1.5em;
-    background-color: var(--blue);
+    background-color: var(--primary);
+    color: white;
     transition: all 0.2s ease;
 }
+.inputButton:disabled {
+    background-color: var(--secFont);
+    color: white;
+}
 .inputButton:active {
-    background-color: white;
+    background-color: var(--secFont);
+    color: var(--priFont);
 }
 .signin {
     width: 100%;
