--- a/client/src/components/TotalBalance/TotalBalance.module.css
+++ b/client/src/components/TotalBalance/TotalBalance.module.css
@@ -1,7 +1,21 @@
 .contTotalBalance {
-    border: 1px solid red;
-    width: 90%;
+    /* border: 1px solid red; */
+    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
+}
+.contTotalBalance > h4 {
+    margin: 0;
+    padding: 0;
+    font-family: 'Nunito';
+    color: var(--secFont);
+}
+.contTotalBalance > h1 {
+    padding: 0;
+    margin: 0;
+    color: var(--primary);
+    font-family: 'Nunito';
 }
