--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -13,23 +13,24 @@
 } */
 .divTop {
     /* border: 1px solid green; */
-    border-radius: 0 0 10px 10px;
+    /* border-radius: 0 0 10px 10px; */
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 3rem;
-    position: fixed;
-    top: 0;
+    height: 10rem;
+    /* position: fixed; */
+    /* top: 0; */
     background-color: var(--back);
-    box-shadow: 0 5px 25px 0 black;
+    /* box-shadow: 0 5px 25px 0 black; */
 }
 
 .divRecords {
     /* border: 1px solid blue; */
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     margin-bottom: 5rem;;
     /* height: 20rem; */
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,14 +38,16 @@
 
 .divBottom {
     /* border: 1px solid green; */
-    border-radius: 10px 10px 0 0;
+    /* border-radius: 10px 10px 0 0; */
+    /* border-top: 1px solid var(--secFont); */
     display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
     width: 100%;
-    height: 3rem;
+    height: 4rem;
     bottom: 0;
     background-color: var(--back);
-    box-shadow: 0 -5px 25px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 -1px 10px 0 rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
