--- a/client/src/pages/History/History.module.css
+++ b/client/src/pages/History/History.module.css
@@ -6,3 +6,13 @@
     align-items: center;
     /* border: 5px solid blue; */
 }
+.divSearch {
+    /* border: 1px solid green; */
+    width: 100%;
+    height: 10rem;
+}
+.divResults {
+    /* border: 1px solid purple; */
+    width: 100%;
+    /* height: 6rem; */
+}
