--- a/client/src/pages/Home/Home.module.css
+++ b/client/src/pages/Home/Home.module.css
@@ -51,3 +51,18 @@
     box-shadow: 0 -1px 10px 0 rgba(0, 0, 0, 0.1);
     z-index: 1;
 }
+.newOperBtn {
+    padding: .5em 1.5em;
+    border-radius: 10px;
+    border: none;
+    background-color: var(--primary);
+    font-family: 'Nunito';
+    font-weight: 800;
+    color: white;
+    font-size: 1.2em;
+    transition: all 0.2s ease;
+}
+.newOperBtn:active {
+    color: var(--priFont);
+    background-color: var(--secFont);
+}
