Add animations in menus

--- a/client/src/components/SignUp/SignUp.module.css
+++ b/client/src/components/SignUp/SignUp.module.css
@@ -78,7 +78,7 @@
 }
 .linkText {
     text-decoration: underline;
-    color: black;
+    color: var(--priFont);
     font-size: 1.3rem;
     font-family: 'Nunito';
 }
