--- a/client/src/components/EditOrDelete/EditOrDelete.module.css
+++ b/client/src/components/EditOrDelete/EditOrDelete.module.css
@@ -2,13 +2,14 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.2);
-    position: absolute;
+    position: fixed;
     top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 2;
     backdrop-filter: blur(1px);
+    /* border: 1px solid red; */
 }
 .contEditOrDelete {
     background-color: white;
@@ -20,6 +21,7 @@
     justify-content: space-between;
     align-items: center;
     /* padding: 1rem 0; */
+    animation: bornCard 0.5s;
 }
 .contEditOrDelete > div {
     /* border: 1px solid red; */
@@ -47,4 +49,13 @@
     background-color: transparent;
     font: 400 1em 'Nunito';
     text-decoration: underline;
+}
+
+@keyframes bornCard {
+    from {
+        transform: translateY(500%);
+    }
+    to {
+        transform: translateY(0%);
+    }
 }
