--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -21,6 +21,8 @@
     margin-right: 1em;
 }
 .backgroundNavBar {
+    /* border: 1px solid red; */
+    overflow: hidden;
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -45,6 +47,7 @@
     flex-direction: column;
     justify-content: flex-start;
     background-color: white;
+    animation: bornSide 0.5s;
 }
 .link {
     /* border-radius: 10px; */
@@ -73,4 +76,13 @@
     /* background-color: transparent; */
     /* border-bottom: 2px solid var(--secFont); */
     /* border-top: 2px solid var(--secFont); */
+}
+
+@keyframes bornSide {
+    from {
+        transform: translateX(100%);
+    }   
+    to {
+        transform: translateX(0%);
+    }
 }
