--- a/client/src/components/RegisterOper/RegisterOper.module.css
+++ b/client/src/components/RegisterOper/RegisterOper.module.css
@@ -1,16 +1,19 @@
 .backgroundCont {
-    height: 100%;
+    height: 100vh;
+    padding: 1rem 0;
     width: 100%;
     /* background-color: grey; */
     background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 3;
     backdrop-filter: blur(1.5px);
+    /* border: 1px solid red; */
+    overflow: hidden;
 }
 .contRegisterOper {
     /* border: 1px solid red; */
@@ -23,6 +26,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    animation: bornCard 0.5s;
 }
 
 .form {
@@ -74,4 +78,13 @@
     background-color: transparent;
     font-family: 'Nunito';
     font-size: 1.2em;
+}
+
+@keyframes bornCard {
+    from {
+        transform: translateY(100%);
+    }
+    to {
+        transform: translateY(0%);
+    }
 }
