--- a/client/src/components/SignIn/SignIn.module.css
+++ b/client/src/components/SignIn/SignIn.module.css
@@ -41,15 +41,18 @@
 } */
 
 .inputBox {
-    border: 1px solid black;
+    border: 1px solid var(--secFont);
     border-radius: 10px;
     outline: none;
     width: 80%;
     padding: 2% 4%;
     font-family: 'Nunito';
     font-size: 1.5em;
+    transition: all 0.2s ease;
 }
-
+.inputBox:focus {
+    border: 1px solid var(--priFont);
+}
 .inputButton {
     width: 80%;
     border: none;
@@ -72,13 +75,13 @@
 .signup {
     width: 100%;
     height: 10%;
-    font-size: 1.3rem;
     display: flex;
     align-items: center;
     justify-content: flex-start;
 }
 .linkText {
-    color: black;
+    font-size: 1.2rem;
+    color: var(--priFont);
     font-family: 'Nunito';
 }
 
