--- a/client/src/components/LastRecords/LastRecords.module.css
+++ b/client/src/components/LastRecords/LastRecords.module.css
@@ -6,4 +6,9 @@
     align-items: center;
     /* background-color: red; */
 }
+.contLastRecords > h1 {
+    font-family: 'Nunito';
+    font-weight: 800;
+    color: var(--primary);
+}
 
