--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -19,7 +19,9 @@
     height:100%;
     width: 10%;
     padding: 0;
-    margin-right: 1em;
+    margin: 2em 1em 0 0;
+    transition: all 0.2s ease;
+    border-radius: 10px;
 }
 .backgroundNavBar {
     /* border: 1px solid red; */
@@ -64,6 +66,7 @@
     color: var(--primary);
     text-decoration: none;
     /* color: black; */
+    transition: all 0.2s ease;
 }
 .link:active {
     color: var(--primary);
@@ -76,6 +79,7 @@
     font-weight: 600;
     color: var(--primary);
     background-color: transparent;
+    transition: all 0.2s ease;
     /* border-bottom: 2px solid var(--secFont); */
     /* border-top: 2px solid var(--secFont); */
 }
@@ -87,4 +91,42 @@
     to {
         transform: translateX(0%);
     }
+}
+
+/* Small devices */
+@media screen and (min-width: 576px) {
+    
+}
+/* Medium devices */
+@media screen and (min-width: 768px) {
+    .navButton:hover {
+        cursor: pointer;
+        background-color: var(--primary);
+        color: var(--back);
+    }
+    .contMenu {
+        width: 30%;
+    }
+    .closeDiv {
+        width: 70%;
+    }
+    .link:hover {
+        color: var(--back);
+        background-color: var(--primary);
+    }
+    .link:active {
+        padding: .5rem 1.5rem;
+    }
+    .contMenu > button:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
+}
+/* Large devices */
+@media screen and (min-width: 992px) {
+    
+}
+/* Extra large devices */
+@media screen and (min-width: 1200px) {
+
 }
