--- a/client/src/pages/Signup/Signup.module.css
+++ b/client/src/pages/Signup/Signup.module.css
@@ -1,6 +1,7 @@
 .contSignup {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
