--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -44,10 +44,20 @@
     right: 0;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     background-color: var(--back);
     animation: bornSide 0.5s;
     transition: all 0.2s ease;
+}
+.contMenu > h3 {
+    /* padding: .5rem 1rem; */
+    text-align: center;
+    margin: 3rem 0;
+    font-family: 'Nunito';
+    font-size: 1.5rem;
+    font-weight: 800;
+    color: var(--primary);
+    text-decoration: none;
 }
 .link {
     padding: .5rem 1rem;
