--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -44,13 +44,13 @@
     right: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     background-color: var(--back);
     animation: bornSide 0.5s;
     transition: all 0.2s ease;
 }
 .contMenu > h3 {
-    /* padding: .5rem 1rem; */
+    padding: .5rem 1rem;
     text-align: center;
     margin: 3rem 0;
     font-family: 'Nunito';
