--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,52 @@
 .App {
     background-color: var(--back);
 }
+.cookieContainer {
+    /* border: 1px solid green; */
+    height: 5rem;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    backdrop-filter: blur(2px);
+    box-shadow: 0 -5px 15px -5px var(--secFont);
+    z-index: 15;
+}
+.cookieContent {
+    /* border: 1px solid red; */
+    font-family: 'Nunito';
+    font-weight: 800;
+    font-size: 1em;
+    /* margin-left: 1rem; */
+    color: var(--primary);
+}
+.cookieButton {
+    border: none;
+    border-radius: 10px;
+    background-color: var(--primary);
+    color: white;
+    font-family: 'Nunito';
+    font-weight: 600;
+    /* margin-right: 1rem; */
+    padding: .5rem 1rem;
+}
+.cookieButton:hover {
+    cursor: pointer;
+    box-shadow: 0 0 10px var(--primary);
+}
+
+@media screen and (min-width: 768px) {
+    .cookieContainer {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .cookieContent {
+        margin-left: 1rem;
+    }
+    .cookieButton {
+        margin-right: 1rem;
+    }
+}
