--- a/client/src/pages/Statistics/Statistics.module.css
+++ b/client/src/pages/Statistics/Statistics.module.css
@@ -13,3 +13,24 @@
 .divStats {
     width: 90%;
 }
+
+/* Small devices */
+@media screen and (min-width: 576px) {
+}
+/* Medium devices */
+@media screen and (min-width: 768px) {
+    .divSearch {
+        width: 40rem;
+    }
+    .divStats {
+        width: 40rem;
+    }
+}
+/* Large devices */
+@media screen and (min-width: 992px) {
+    
+}
+/* Extra large devices */
+@media screen and (min-width: 1200px) {
+
+}
