--- a/client/src/components/CardOper/CardOper.module.css
+++ b/client/src/components/CardOper/CardOper.module.css
@@ -40,6 +40,7 @@
     flex-direction: column;
     justify-content: center;
     min-width: 5rem;
+    margin: 0 0.5rem;
 }
 .dataDiv > input {
     background-color: transparent;
