--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,24 @@
-.App {
-    background-color: var(--back);
+/* .App { */
+    /* background-color: var(--back); */
+    /* border: 1px solid red; */
+/* } */
+.backimg {
+    position: absolute;
+    top: 0;
+    /* border: 1px solid red; */
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -10;
+}
+.backimg > img {
+    width: 50%;
+    height: 100%;
+    object-fit: contain;
+    filter: opacity(0.04);
 }
 .cookieContainer {
     /* border: 1px solid green; */
